K8S/frontend-service .yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: dashboard-namespace
spec:
  selector:
    app: frontend

  ports:
    - port: 80  
      targetPort: 80

  type: ClusterIP
